...
                                                <rect key="frame" x="0.0" y="42.5" width="343" height="34"/>
                                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="0.25066887842465746" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="Enter your answer to question 1" identifier="Question1AnswerTextField" label="Question 1 Text Field"/>
                                                <color key="textColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <rect key="frame" x="0.0" y="127" width="343" height="34.5"/>
                                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="0.25066887842465746" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="Enter your answer to question 2" identifier="Question2AnswerTextField" label="Question 2 Text Field"/>
                                                <color key="textColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <rect key="frame" x="0.0" y="211.5" width="343" height="34.5"/>
                                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="0.25066887842465746" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="Enter your answer to question 3" identifier="Question3AnswerTextField" label="Question 3 Text Field"/>
                                                <color key="textColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <rect key="frame" x="0.0" y="42.5" width="343" height="34"/>
                                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="0.24914383561643835" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="Enter your answer to question 4" identifier="Question4AnswerTextField" label="Question 4 Text Field"/>
                                                <color key="textColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <rect key="frame" x="0.0" y="127" width="343" height="34.5"/>
                                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="0.24914383561643835" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="Enter your answer to question 5" identifier="Question5AnswerTextField" label="Question 5 Text Field"/>
                                                <color key="textColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <rect key="frame" x="0.0" y="211.5" width="343" height="34.5"/>
                                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="0.24914383561643835" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="Enter your answer to question 6" identifier="Question6AnswerTextField" label="Question 6 Text Field"/>
                                                <color key="textColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="0.0" y="602.5" width="375" height="64.5"/>
                                <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Answer Questions" identifier="AnswerQuestionsButton" label="Keep Going"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <state key="normal" title="Keep Going">
...
                                <rect key="frame" x="0.0" y="600.5" width="375" height="66.5"/>
                                <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Telll More of the Story" identifier="TellStoryButton" label="Tell Me More"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <state key="normal" title="Tell Me More">
...
